deploy/kubernetes/overlays/local/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - name: http
      port: 8080
      targetPort: 8080
